# foldit

./: .gitignore  .gitmodules  Cargo.toml  Foldit.icns  README.md  build.rs  deny.toml  justfile  packager.json  pixi.toml  tauri.conf.json
.cargo/: config.toml
.github/workflows/: docs.yml
assets/: .gitignore
assets/models/: 1bfe.cif  1zbb.cif
assets/puzzle_setup/: dojo.toml  dojo_minimal.toml  dojo_standard.toml  intro.toml  intro_design.toml  intro_mindisplay.toml  intro_minimal.toml  intro_standard.toml  ligand_minimal.toml
assets/view_presets/: Default.toml  Simple.toml  cartoon.toml  default.toml  semi_metallic.toml  smooth.toml
capabilities/: default.json
crates/foldit-core/: Cargo.toml  README.md
crates/foldit-core/src/: action_router.rs  app.rs  atom_name.rs  backend_results.rs  clashes.rs  entity_store.rs  gui_projector.rs  host_effects.rs  host_resources.rs  lib.rs  plugin_driver.rs  pull_drag.rs  puzzle.rs  puzzle_load.rs  puzzle_setup.rs  puzzle_toml.rs  render_projector.rs  runner_client.rs  runner_projector.rs  scores.rs  structure_io.rs  transition.rs  voids.rs  wire_params.rs  xtal.rs
crates/foldit-core/src/app/: clash_coord.rs  command.rs  density.rs  dispatch.rs  exposed_hydro_coord.rs  gesture.rs  harness.rs  init_config.rs  input.rs  load.rs  mod.rs  ops.rs  panels.rs  pick.rs  plugins.rs  preview.rs  progress.rs  projectors.rs  refine.rs  rfree.rs  score_apply.rs  score_coordinator.rs  scores_coord.rs  segment.rs  sphere_select.rs  startup.rs  tests.rs  ui.rs  view.rs  view_options.rs  viz_refresh.rs  voids_coord.rs
crates/foldit-core/src/document/: apply.rs  broadcast.rs  change.rs  metadata.rs  mod.rs  render.rs  tests.rs
crates/foldit-core/src/entity_store/: broadcast.rs  metadata.rs  mod.rs  render.rs  tests.rs
crates/foldit-core/src/history/: best.rs  composition.rs  curation.rs  dispatch.rs  error.rs  eviction.rs  invariant.rs  mod.rs  ongoing.rs  pending.rs  record.rs  record_root.rs  storage.rs  tests.rs  types.rs
crates/foldit-core/src/runner_client/: catalog.rs  clashes.rs  dispatch.rs  exposed_hydrophobics.rs  mod.rs  pull.rs  scores.rs  types.rs  voids.rs  weights.rs
crates/foldit-core/src/session/: apply.rs  change.rs  commands.rs  load.rs  metadata.rs  mod.rs  mutators.rs  previews.rs  tests.rs  viz.rs
crates/foldit-core/src/viz/: clashes.rs  connections.rs  exposed_hydrophobics.rs  mod.rs  refresh.rs  voids.rs
crates/foldit-desktop/: Cargo.toml  README.md  build.rs
crates/foldit-desktop/src/: host.rs  main.rs  plugin_assets.rs  tee_logger.rs  webview_assets.rs  window.rs
crates/foldit-desktop/src/offscreen_webview/: capture.rs  input.rs  mod.rs
crates/foldit-gui/: Cargo.toml  README.md
crates/foldit-gui/src/: actions.rs  lib.rs  state.rs  wire.rs
crates/foldit-gui/src/bridge/: decode.rs  dispatch.rs  message.rs  mod.rs  push.rs  transport.rs
crates/foldit-gui/tests/: export_wire_types.rs
crates/foldit-runner/: .gitignore  Cargo.toml  README.md  deny.toml  justfile  pytest.ini
crates/foldit-runner/pixi_scripts/: bundle_runtime.py
crates/foldit-runner/python-host/: Cargo.toml  README.md  build.rs  pixi.toml
crates/foldit-runner/python-host/src/: initialization.rs  lib.rs  library.rs  pyplugin.rs  python_config.rs
crates/foldit-runner/src/: error.rs  lib.rs
crates/foldit-runner/src/ipc/: constants.rs  messaging.rs  mod.rs  sockets.rs
crates/foldit-runner/src/ipc/iceoryx/: manager.rs  mod.rs  publisher.rs  subscriber.rs
crates/foldit-runner/src/orchestrator/: assets.rs  cleanup.rs  client.rs  core.rs  lock_check.rs  manifest.rs  mod.rs  pump.rs  queries.rs  scores.rs  spawn.rs  stream_update.rs  types.rs  weights.rs
crates/foldit-runner/src/orchestrator/ops/: broadcast.rs  dispatch.rs  mod.rs  registration.rs
crates/foldit-runner/src/plugin/: mod.rs  native.rs  python_host.rs
crates/foldit-runner/src/runtime/: binary.rs  mod.rs  socket.rs
crates/foldit-runner/src/worker/: mod.rs  runner.rs
crates/foldit-runner/tests/: abi_proto_correspondence.rs  plugin_round_trip.rs
crates/foldit-runner/tests/fixtures/dummy/: pixi.toml  plugin.toml  pyproject.toml
crates/foldit-runner/tests/fixtures/dummy/dummy/: __init__.py
crates/foldit-web/: Cargo.toml  README.md  build.rs
crates/foldit-web/src/: host.rs  lib.rs
docs/: book.toml
docs/book/: 404.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-61fe0e40.js  searchindex-6e2c5089.js  searchindex-70c37fe9.js  searchindex-72710268.js  toc-337fa47a.js  toc-9ae07f6d.js  toc.html
docs/src/: SUMMARY.md  introduction.md
packaging/: macos.entitlements
plugins/design/: Cargo.toml  README.md  plugin.build.toml  plugin.toml
plugins/design/scripts/: build.ps1  build.sh
plugins/design/src/: lib.rs
plugins/xtal/: .gitignore  Cargo.toml  README.md  plugin.toml
plugins/xtal/scripts/: build.ps1  build.sh
plugins/xtal/src/: lib.rs
rosetta-interacitve/: build.zig
rosetta-interacitve/include/: rosetta_interactive.h
rosetta-interacitve/lib/: libObjexxFCL.dylib  libcmaes.dylib  libcore.1.dylib  libcore.4.dylib  libcore.6.dylib  libcppdb.dylib  liblibxml2.dylib  libnumeric.dylib  libsqlite3.dylib  libutility.dylib
rosetta-interacitve/src/: rosetta_interactive.cpp
scripts/: check_file_lengths.py
src/: action_manager.rs  action_router.rs  animation.rs  backend_handler.rs  backend_results.rs  commands.rs  entity_store.rs  focus.rs  lib.rs  main.rs  ml_runner.rs  molecule_state.rs  puzzle.rs  render_snapshot.rs  rosetta_ffi.rs  rosetta_runner.rs  scene.rs  session.rs  shared_state.rs  tee_logger.rs  visual_effects.rs  window.rs
src/frontend/: actions.rs  mod.rs  state.rs
src/history/: error.rs  eviction.rs  mod.rs  record.rs  storage.rs  tests.rs  types.rs
webview/: .editorconfig  .gitignore  AGENTS.md  DEVELOPMENT.md  README.md  eslint.config.js  global.d.ts  index-web.html  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
webview/docs/: communication_rearchitecture.md  (+1 more)
xtask/: Cargo.toml  README.md
xtask/src/: filters_transcribe.rs  main.rs
(+198 files in other folders)
