[workspace]
resolver = "2"
members = [
  "crates/foldit-core",
  "crates/foldit-desktop",
  "crates/foldit-gui",
  "crates/foldit-runner/python-host",
  "crates/foldit-web",
  "xtask",
]
default-members = ["crates/foldit-desktop"]

# Submodule directories that exist in-tree but are NOT workspace members.
# Without this, cargo's workspace discovery walks into these from outside
# (e.g., maturin running `cargo metadata` on crates/molex/Cargo.toml) and
# errors with "current package believes it's in a workspace when it's not".
exclude = ["crates/viso", "crates/molex", "crates/foldit-runner"]

# ── Local development overrides ───────────────────────────────────────
# Each block below redirects a published dep to its local submodule
# checkout. Toggle them per-dep, independently:
#
#   1. `git submodule update --init crates/<name>` to populate the path.
#   2. Uncomment the matching block.
#   3. `cargo build` will now use the local checkout.
#
# Leave commented for the default "use published version" workflow.

[patch."https://github.com/foldit-org/viso"]
viso = { path = "crates/viso" }

[patch.crates-io]
molex = { path = "crates/molex" }
