[workspace]
resolver = "2"
members = [
  "crates/foldit-core",
  "crates/foldit-desktop",
  "crates/foldit-gui",
  "crates/foldit-runner/python-host",
  "crates/foldit-web",
  "xtask",
]
default-members = ["crates/foldit-desktop"]

# Shared package metadata for the root-owned members. Submodule-resident
# members (foldit-gui, foldit-runner/python-host) set these inline instead,
# since they live in their own repos and inheriting here would couple them
# to this workspace.
[workspace.package]
authors = ["Andreas Petrides <apetrides32@gmail.com>"]
license = "MIT"
repository = "https://github.com/foldit-org/foldit"
keywords = ["protein", "folding", "molecular"]
categories = ["science"]

# Submodule directories that exist in-tree but are NOT workspace members.
# Without this, cargo's workspace discovery walks into these from outside
# (e.g., maturin running `cargo metadata` on crates/molex/Cargo.toml) and
# errors with "current package believes it's in a workspace when it's not".
exclude = ["crates/viso", "crates/molex", "crates/foldit-runner", "crates/foldit-plugin-sdk"]

# Workspace lints. Mirrors viso's clippy set but every level is `warn`
# (not `deny`): these checks surface the technical-debt picture across
# the root members, they do not gate the build. Members opt in with
# `[lints]\nworkspace = true`.
[workspace.lints.clippy]
# Broad lint groups (lower priority so individual lints can override)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# multiple_crate_versions is owned by cargo-deny (deny.toml [bans].skip), which
# supports per-crate exceptions with reasons; clippy's version is all-or-nothing.
multiple_crate_versions = "allow"
# Restriction lints (opt-in, not covered by the groups above)
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
str_to_string = "warn"

# ── Local development overrides ───────────────────────────────────────
# Each block below redirects a published dep to its local submodule
# checkout. Toggle them per-dep, independently:
#
#   1. `git submodule update --init crates/<name>` to populate the path.
#   2. Uncomment the matching block.
#   3. `cargo build` will now use the local checkout.
#
# Leave commented for the default "use published version" workflow.

[patch."https://github.com/foldit-org/viso"]
viso = { path = "crates/viso" }

[patch.crates-io]
molex = { path = "crates/molex" }
foldit-plugin-sdk = { path = "crates/foldit-plugin-sdk" }
