[workspace]
resolver = "2"
members = [
  "crates/foldit-core",
  "crates/foldit-desktop",
  "crates/foldit-gui",
  "crates/foldit-runner",
  "crates/foldit-runner/python-host",
  "crates/foldit-web",
  "xtask",
]
default-members = ["crates/foldit-desktop"]

[workspace.package]
authors = ["Andreas Petrides <apetrides32@gmail.com>"]
license = "MIT"
repository = "https://github.com/foldit-org/foldit"
keywords = ["protein", "folding", "molecular"]
categories = ["science"]

# Submodule directories that exist in-tree but aren't workspace members.
# (They function as standalone dependencies, opt-in for local dev)
exclude = ["crates/viso", "crates/molex", "crates/foldit-plugin-sdk"]

# Optimized release profile (hoisted from foldit-runner when it moved in-tree;
# a member's own [profile] is ignored). Applies to the whole workspace release
# build, so packaged binaries are LTO'd and stripped.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Workspace lints: these checks surface the technical-debt picture across
# the root members, they do not gate the build. 
# Members can be opted in with `[lints] workspace = true`.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
str_to_string = "warn"

# Local development overrides
# Each block below redirects a published dep to its local submodule
# checkout. Toggle them per-dep, independently:
#
#   1. `git submodule update --init crates/<name>` to populate the path.
#   2. Uncomment the matching block.
#   3. `cargo build` will now use the local checkout.
#
# Leave commented for the default "use published version" workflow.

# WARNING: local-path patches for dev use only.
# Do not commit to dev/main branches with these uncommented.

[patch."https://github.com/foldit-org/viso"]
viso = { path = "crates/viso" }

# [patch.crates-io]
# foldit-plugin-sdk = { path = "crates/foldit-plugin-sdk" }
# molex = { path = "crates/molex" }
