[package]
name = "foldit-core"
version = "0.1.0"
edition = "2021"
description = "Pure-logic core: entity store, focus, history, puzzle loading"

[dependencies]
foldit-gui = { path = "../foldit-gui" }
foldit-runner = { path = "../foldit-runner", default-features = false }
viso = { git = "https://github.com/foldit-org/viso", tag = "v0.3.0", default-features = false }
molex = { version = "0.4.2", features = ["serde", "specta"] }

# Core
glam = "0.30"
indexmap = "2"
slotmap = "1.0"
smallvec = "1"

# Lock-free per-entity coord buffering
triple_buffer = "8"

# Utilities
log = "0.4"
# Drop-in `std::time::{SystemTime, Instant}` replacement that works on
# wasm32-unknown-unknown by routing to `performance.now()` / `Date.now()`.
# Plain `std::time` panics on that target with "time not implemented".
web-time = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"

# Error handling
thiserror = "1.0"

# Native-only HTTP client for downloading from RCSB. On wasm the equivalent
# fetch() bridge belongs in foldit-web (mirrors viso's split: web entry uses
# `web_sys::window().fetch_with_str`, native uses a sync HTTP client).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[dev-dependencies]
proptest = "1"
serde_json = "1"
