[package]
name = "foldit-desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop binary (wry + winit + wgpu)"
default-run = "foldit"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
publish = false

[[bin]]
name = "foldit"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Workspace crates
foldit-core = { path = "../foldit-core" }
foldit-gui = { path = "../foldit-gui" }
foldit-runner = { path = "../foldit-runner" }

# External deps
viso = { git = "https://github.com/foldit-org/viso", tag = "v0.3.6", default-features = false }

# Windowing / event loop
winit = "0.30"
pollster = "0.4"

# Utilities
log = "0.4"
env_filter = "1.0"

# Embedded webview
wry = { version = "0.50", features = ["transparent"] }

# Native cross-platform file dialog (macOS/Windows/Linux backends)
rfd = "0.15"

# Serialization for IPC and FrontendState
serde_json = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3.10"
