[package]
name = "foldit-desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop binary (wry + winit + wgpu)"
default-run = "foldit"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
publish = false

[[bin]]
name = "foldit"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Workspace crates
foldit-core = { path = "../foldit-core" }
foldit-gui = { path = "../foldit-gui" }
foldit-runner = { path = "../foldit-runner" }

# External deps
viso = { git = "https://github.com/foldit-org/viso", tag = "v0.3.10", default-features = false }

# Windowing / event loop
winit = "0.30"
pollster = "0.4"

# Utilities
log = "0.4"
env_filter = "1.0"

# Embedded webview
wry = { version = "0.50", features = ["transparent"] }

# Native cross-platform file dialog (macOS/Windows/Linux backends)
rfd = "0.15"

# Serialization for IPC and GuiState
serde_json = "1"

# Host-owned puzzle-progress persistence. The host owns the async runtime and
# drives opfs file I/O off the event-loop thread; foldit-core only serializes
# and accepts bytes.
opfs = "0.2.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "fs"] }
dirs = "5"

# Linux: wry uses WebKitGTK, which requires GTK to be initialized on the main
# thread and driven by the GTK main loop. winit does neither for us (tao would),
# so we pull in the gtk bindings directly to `gtk::init()` and pump the loop.
# Version pinned to match wry 0.50's gtk 0.18 so both share the same GTK state.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[dev-dependencies]
proptest = "1"
tempfile = "3.10"
