[package]
name = "foldit-desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop binary (wry + winit + wgpu)"
default-run = "foldit"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
publish = false

[[bin]]
name = "foldit"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Workspace crates
foldit-core = { path = "../foldit-core" }
foldit-gui = { path = "../foldit-gui" }
foldit-runner = { path = "../foldit-runner" }

# External deps
viso = { git = "https://github.com/foldit-org/viso", tag = "v0.3.13", default-features = false }

# Windowing / event loop
winit = "0.30"
pollster = "0.4"

# Utilities
log = "0.4"
env_filter = "1.0"

# Native cross-platform file dialog (macOS/Windows/Linux backends)
rfd = "0.15"

# Serialization for IPC and GuiState
serde_json = "1"

# Host-owned puzzle-progress persistence. The host owns the async runtime and
# drives opfs file I/O off the event-loop thread; foldit-core only serializes
# and accepts bytes.
opfs = "0.2.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "fs"] }
dirs = "5"

# WebKitGTK cannot paint transparent pixels into an on-screen X window, so the
# webview is hosted off-screen and composited as a texture (`offscreen_webview`)
# instead of being parented to the winit window by wry.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
webkit2gtk = { version = "2.0", features = ["v2_40"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
wry = { version = "0.50", features = ["transparent"] }

[dev-dependencies]
proptest = "1"
tempfile = "3.10"
