[package]
name = "foldit-gui"
version = "0.1.0"
edition = "2021"
description = "GUI state types, action definitions, and wire payloads for foldit"
authors = ["Andreas Petrides <apetrides32@gmail.com>"]
license = "MIT"
repository = "https://github.com/foldit-org/foldit"
keywords = ["protein", "folding", "molecular"]
categories = ["science"]
publish = false

[lints]
workspace = true

[dependencies]
molex = { version = "0.5.1", features = ["serde", "specta"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitflags = "2"
indexmap = { version = "2", features = ["serde"] }
slotmap = { version = "1", features = ["serde"] }
specta = { version = "=2.0.0-rc.25", features = ["derive", "indexmap"] }
specta-typescript = "0.0.12"

[dev-dependencies]
specta-serde = "0.0.12"
