[package]
name = "foldit-runner"
version = "0.1.0"
edition = "2021"
description = "Plugin runner for Foldit: hosts language-agnostic plugins (Python, native) over a unified proto::plugin protocol"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "foldit_runner"
crate-type = ["rlib"]

# Worker binary. Hosts plugins via the unified protocol over IPC.
[[bin]]
name = "foldit-worker"
path = "src/bin/worker.rs"

[dependencies]
thiserror = "2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

molex = "0.7.4"
foldit-plugin-sdk = "0.1.4"

# Still encodes/decodes the SDK's proto types on the IPC + vtable boundaries.
prost = "0.13"
anyhow = "1.0.100"

chrono = "0.4.42"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Logging (env_logger pulls regex; not needed on wasm)
env_logger = "0.11"

# Cross-platform user dirs (no filesystem on wasm)
dirs = "5.0"

# Cross-process IPC (worker <-> main process)
iceoryx2 = "0.4.0"
interprocess = "2.1.0"

# Dynamic library loading for native plugins. Used by the worker process
# to dlopen plugin dylibs and dispatch through the C ABI vtable.
libloading = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Reserved for future wasm-bindgen scaffolding when phase 4 lands.

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_LibraryLoader"] }

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.0"

[features]
default = []

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
str_to_string = "deny"

multiple_crate_versions = "allow"
missing_const_for_fn = "allow"
default_trait_access = "allow"
doc_markdown = "allow"
similar_names = "allow"
items_after_statements = "allow"
use_self = "allow"
redundant_pub_crate = "allow"

[lints.rust]
missing_docs = "deny"
unused_results = "deny"
unused_qualifications = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
bare_urls = "deny"
