[package]
name = "foldit-web"
version = "0.1.0"
edition = "2021"
description = "Web (wasm32) entry crate: wasm-bindgen surface + canvas-mounted viso"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
# Workspace crates
foldit-core = { path = "../foldit-core" }
foldit-gui = { path = "../foldit-gui" }

# Render engine. We deliberately do NOT enable viso's `web` feature here:
# its `app::web::start` would conflict with our own canvas/rAF wiring.
# `default-features = false` strips wry/winit/pollster.
viso = { git = "https://github.com/foldit-org/viso", tag = "v0.3.6", default-features = false }

# Universal
log = "0.4"
serde_json = "1"
wgpu = "26"

# ── Wasm-only deps ───────────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_log = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
# viso's pipeline processor parallelizes via rayon-on-web-workers and
# requires the pool to exist before any RenderContext is constructed.
wasm-bindgen-rayon = { version = "1", features = ["no-bundler"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Performance",
  "MouseEvent",
  "KeyboardEvent",
  "WheelEvent",
  "PointerEvent",
  "EventTarget",
  "DomRectReadOnly",
  "ResizeObserver",
  "ResizeObserverEntry",
  "ResizeObserverSize",
]
