# Standalone workspace: cargo must not unify this plugin's features with the
# host graph.
[workspace]

[package]
name = "foldit-design-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# Resolves to libdesign.so / libdesign.dylib / design.dll, which is what
# `plugin.toml`'s `[native] binary = "design"` names.
name = "design"
crate-type = ["cdylib"]

[dependencies]
foldit-plugin-sdk = { path = "../../crates/foldit-plugin-sdk" }
# Base molex: `mutate_residue`, `AminoAcid` and the assembly wire format are
# all ungated.
molex = "0.7.2"

# foldit-plugin-sdk depends on `molex` from crates.io. Without this patch the
# plugin's molex and the SDK's would be distinct crates and `Assembly` would
# not typecheck across the boundary.
[patch.crates-io]
molex = { path = "../../crates/molex" }
