# Standalone workspace: cargo must not unify this plugin's features with the
# host graph. molex/gpu pulls cubecl, whose derive_more `eq` feature breaks
# webrender's built-in PartialEq derive if it reaches foldit-desktop.
[workspace]

[package]
name = "foldit-xtal-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# Resolves to libxtal.so / libxtal.dylib / xtal.dll, matching
# `plugin.toml`'s `[native] binary = "xtal"`.
name = "xtal"
crate-type = ["cdylib"]

[dependencies]
foldit-plugin-sdk = { path = "../../crates/foldit-plugin-sdk" }
# The heavy feature set the host no longer carries: `xtal` (rustfft),
# `gpu` (cubecl/wgpu), `minimization` (argmin).
molex = { version = "0.7.2", features = ["xtal", "gpu", "minimization"] }
prost = "0.13"
log = "0.4"

# foldit-plugin-sdk depends on `molex` from crates.io. Without this patch the
# plugin's molex and the SDK's would be distinct crates and `Assembly` would not
# typecheck across the boundary.
[patch.crates-io]
molex = { path = "../../crates/molex" }
